[package]
name = "volt-waveform"
version = "0.3.3"
authors = ["TheRedXD", "tdgne"]
description = "Audio waveform image renderers"
repository = "https://github.com/TheRedXD/volt-waveform-rs"
categories = ["multimedia::audio", "multimedia::images", "visualization"]
keywords = ["signal", "wave", "sound", "image", "raster"]
readme = "README.md"
license = "Apache-2.0/MIT"

[features]
default = ["rlibc"]
example-gui = ["gtk4", "gdk-pixbuf"]

[dependencies]
rlibc = {version = "1.0.0", optional = true}
gtk4 = {version = "0.10.2", optional = true}
gdk-pixbuf = {version = "0.21.2", optional = true}
